<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Gambarumeter</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About this app</string>


    <string name="delete">Delete</string>
    <string name="confirm_delete">Do you really want to delete?</string>

    <string name="bpm" translatable="false">bpm</string>
    <string name="steps">steps</string>

    <string name="chart_time">time</string>
    <string name="chart_heart_rate">bpm</string>
    <string name="chart_steps">steps</string>

    <string name="distance">distance</string>

    <string name="drawer_open" translatable="false">Open drawer</string>
    <string name="drawer_close" translatable="false">Close drawer</string>
    <string-array name="drawer_menu">
        <item>@string/export_file</item>
        <item>@string/mobile_settings</item>
        <item>@string/wear_settings</item>
    </string-array>
    <string name="export_file">Export</string>
    <string name="import_file">Import</string>
    <string name="history">History</string>
    <string name="mobile_settings">Settings</string>
    <string name="wear_settings">Wear Settings</string>

    <string name="chart">Chart</string>
    <string name="map">Map</string>
    <string name="split_time">Split Time</string>

    <string name="nodata">No data</string>
    <string name="saved">Saved as %1$s</string>
    <string name="pref_distance_unit">Distance Unit</string>
    <string name="pref_location">Location</string>
    <string name="pref_metre">Metre</string>
    <string name="pref_mile">Mile</string>
    <string name="select">Select</string>


</resources>
